--- a/app/index.html
+++ b/app/index.html
@@ -2,21 +2,36 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My Divshot Application</title>
-
   <style>
-    body{
-      font:500 14px/21px 'Helvetica Neue', Helvetica, Arials;
-      padding:40px;
-    }
-  </style>
 
+    html, body {
+      padding: 0px;
+      margin: 0px;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
+
+  </style>
 </head>
 <body>
-  <h1>Welcome to Divshot Hosting!</h1>
-  <p>Make something static!</p>
-  <h2>Should there be something here?</h2>
-  <p><a href="mailto:support@divshot.com">Get Help via Email</a> or <a href="http://docs.divshot.com/guides/common-deploy-issues">Common Deploy Issues Documentation</a></p>
+
+  <script src="/bower_components/chance/chance.js"></script>
+  <script src="/js/Keyboard.js"></script>
+  <script src="/js/pixi.dev.js"></script>
+  <script src="/js/constants.js"></script>
+
+  <script src="/js/Cell.js"></script>
+  <script src="/js/CellSprite.js"></script>
+
+  <script src="/js/Map.js"></script>
+  <script src="/js/MapSprite.js"></script>
+
+  <script src="/js/Game.js"></script>
+  <script src="/js/app.js"></script>
+  
 </body>
 </html>
