--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>My Divshot Application</title>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'>
   <style>
 
     html, body {
       padding: 0px;
       margin: 0px;
+      font-family: 'Roboto', sans-serif;
     }
 
     canvas {
@@ -24,6 +26,9 @@
   <script src="/js/pixi.dev.js"></script>
   <script src="/js/constants.js"></script>
 
+  <script src="/js/Unit.js"></script>
+  <script src="/js/UnitSprite.js"></script>
+
   <script src="/js/Cell.js"></script>
   <script src="/js/CellSprite.js"></script>
 
@@ -32,6 +37,6 @@
 
   <script src="/js/Game.js"></script>
   <script src="/js/app.js"></script>
-  
+
 </body>
 </html>
