--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 <body>
 
   <script src="/bower_components/chance/chance.js"></script>
+  <script src="/js/stats.min.js"></script>
   <script src="/js/Keyboard.js"></script>
   <script src="/js/pixi.dev.js"></script>
   <script src="/js/constants.js"></script>
