links are not absolute now

--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
 </head>
 <body>
 
-  <script src="/bower_components/chance/chance.js"></script>
-  <script src="/js/stats.min.js"></script>
-  <script src="/js/Keyboard.js"></script>
-  <script src="/js/pixi.dev.js"></script>
-  <script src="/js/constants.js"></script>
+  <script src="bower_components/chance/chance.js"></script>
+  <script src="js/stats.min.js"></script>
+  <script src="js/Keyboard.js"></script>
+  <script src="js/pixi.dev.js"></script>
+  <script src="js/constants.js"></script>
 
-  <script src="/js/Unit.js"></script>
-  <script src="/js/UnitSprite.js"></script>
+  <script src="js/Unit.js"></script>
+  <script src="js/UnitSprite.js"></script>
 
-  <script src="/js/Cell.js"></script>
-  <script src="/js/CellSprite.js"></script>
+  <script src="js/Cell.js"></script>
+  <script src="js/CellSprite.js"></script>
 
-  <script src="/js/Map.js"></script>
-  <script src="/js/MapSprite.js"></script>
+  <script src="js/Map.js"></script>
+  <script src="js/MapSprite.js"></script>
 
-  <script src="/js/Game.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="js/Game.js"></script>
+  <script src="js/app.js"></script>
 
 </body>
 </html>
